Media query topbar y splashScreen 2

--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -39,7 +39,7 @@
   margin-bottom: 1.2rem;
   padding-left: 1rem;
 }
-
+/* 
 @media (max-width:42.5em) {
   html {
     font-size: 50%;
@@ -57,4 +57,4 @@
   html {
     font-size: 35%;
   }
-}
+} */
