--- a/src/components/productOrdered/productOrdered.css
+++ b/src/components/productOrdered/productOrdered.css
@@ -87,7 +87,7 @@
   border-top: .1rem solid black;
 }
 
-@media (max-width:42.5em) {
+/* @media (max-width:42.5em) {
   html {
     font-size: 50%;
   }
@@ -104,4 +104,4 @@
   html {
     font-size: 35%;
   }
-}
+} */
