--- a/src/pages/placeOrder/updateOrder/updateOrder.css
+++ b/src/pages/placeOrder/updateOrder/updateOrder.css
@@ -259,7 +259,7 @@
 }
 
 
-@media (max-width:42.5em) {
+/* @media (max-width:42.5em) {
   html {
     font-size: 50%;
   }
@@ -276,4 +276,4 @@
   html {
     font-size: 35%;
   }
-}
+} */
