--- a/src/components/productInput/productInput.css
+++ b/src/components/productInput/productInput.css
@@ -7,7 +7,7 @@
   margin-bottom: .5rem;
 }
 
-@media (max-width:42.5em) {
+/* @media (max-width:42.5em) {
   html {
     font-size: 50%;
   }
@@ -22,6 +22,6 @@
 
 @media (max-width:30em) {
   html {
-    font-size: 35%;
+    font-size: 60%;
   }
-}
+} */
