--- a/src/components/table/table.css
+++ b/src/components/table/table.css
@@ -1,23 +1,39 @@
 table {
-  width: 100%;
-  margin: 5rem 0rem;
-  border-spacing: 1.5rem;
+  /* width: 110rem; */
+  margin: 1rem 0rem;
+  padding: .5rem .5rem;
+  border-collapse: collapse;
+  border-spacing: 1rem;
   color: #444;
+  min-width: 40rem;
+  border-radius: .5rem .5rem 0 0;
+  /* para que el border-radius funcione tengo que poner overflow: hidden */
+  overflow: hidden;
+  box-shadow: 0 0 2rem rgba(0, 0, 0, 0.15);
 }
 
-tr {
+table tr th {
+  background-color: #009879;
+  color: #fff;
+  text-align: left;
+  padding: 0 .5rem;
   margin-bottom: 2rem;
 }
 
 th {
-  width: 25rem;
+  /* width: 20rem; */
   text-align: left;
   font-size: 1.6rem;
 }
 
 td {
-  width: 25rem;
+  /* width: 20rem; */
   font-size: 1.6rem;
+}
+
+td:nth-child(1) {
+  padding-left: 1rem;
+
 }
 
 .abrirCliente__link{
@@ -30,4 +46,192 @@ td {
   margin-right: 2rem;
   text-decoration: none;
   font-size: 1.4rem;
+}
+
+
+table tr th:nth-child(1), table tr td:nth-child(1) {
+  width: 10rem;
+} 
+
+table tr th:nth-child(2), table tr td:nth-child(2) {
+  width: 35rem;
+} 
+
+table tr th:nth-child(3), table tr td:nth-child(3) {
+  width: 35rem;
+} 
+
+table tr th:nth-child(4), table tr td:nth-child(4) {
+  width: 20rem;
+} 
+
+table tbody tr th {
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+}
+
+td {
+  padding: 1.4rem 0;
+}
+
+/* tbody tr {
+  border-bottom: 1px solid #ddd;
+} */
+
+tbody tr:nth-of-type(odd) {
+  background-color: #f3f3f3;
+}
+
+tbody tr:last-of-type {
+  border-bottom: 2px solid #009879;
+}
+
+/* 780px */
+@media (max-width:48.75em) {
+  table tr th:nth-child(1), table tr td:nth-child(1) {
+    width: 10rem;
+  } 
+  
+  table tr th:nth-child(2), table tr td:nth-child(2) {
+    width: 27rem;
+  } 
+  
+  table tr th:nth-child(3), table tr td:nth-child(3) {
+    width: 27rem;
+  } 
+  
+  table tr th:nth-child(4), table tr td:nth-child(4) {
+    width: 15rem;
+  } 
+}
+
+/* 680px */
+@media (max-width:42.5em) {
+  
+  /* table {
+    width: 58rem;
+  } */
+  table tr th:nth-child(1), table tr td:nth-child(1) {
+    width: 8rem;
+  } 
+  
+  table tr th:nth-child(2), table tr td:nth-child(2) {
+    width: 27rem;
+  } 
+  
+  table tr th:nth-child(3), table tr td:nth-child(3) {
+    width: 23rem;
+  } 
+  
+  table tr th:nth-child(4), table tr td:nth-child(4) {
+    width: 15rem;
+  } 
+
+  th, td {
+    font-size: 1.4rem;
+  }
+}
+
+/* 580px */
+@media (max-width:36.25em) {
+  /* table tr th:nth-child(4), table tr td:nth-child(4) {
+    display: none;
+  } */
+
+  /* table {
+    width: 52rem;
+  } */
+  table tr th:nth-child(1), table tr td:nth-child(1) {
+    width: 8rem;
+  } 
+  
+  table tr th:nth-child(2), table tr td:nth-child(2) {
+    width: 27rem;
+  } 
+  
+  table tr th:nth-child(3), table tr td:nth-child(3) {
+    width: 23rem;
+  } 
+  
+  table tr th:nth-child(4), table tr td:nth-child(4) {
+    width: 15rem;
+  } 
+  th, td {
+    font-size: 1.3rem;
+  }
+
+}
+
+/* 520px */
+@media (max-width:32.5em) {
+
+  /* table tr th:nth-child(1), table tr td:nth-child(1) {
+    width: 1%;
+  } 
+
+  table {
+    width: 48rem;
+
+  } */
+
+  /* td {
+    width: 15rem;
+    font-size: 1.6rem;
+  } */
+
+  /* .abrirCliente__link {
+    font-size: 1.3rem;
+  } */
+
+  table tr th:nth-child(4), table tr td:nth-child(4) {
+    display: none;
+  } 
+
+  th, td {
+    font-size: 1.4rem;
+  }
+}
+
+/* 430px */
+@media (max-width:26.875em) {
+
+  table {
+    min-width: 35rem;
+  }
+
+  table tbody tr th {
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+  }
+
+  td {
+    padding-top: 1.4rem;
+  }
+
+  td:nth-child(1) {
+    padding-left: 1rem;
+
+  }
+  /* table {
+    width: 35rem;
+    padding: 0 1rem;
+  } */
+
+  /* table tr th:nth-child(1), table tr td:nth-child(1) {
+    width: 1%;
+  } 
+
+  table tr th:nth-child(2), table tr td:nth-child(2) {
+    width: 1%;
+  } 
+  
+  table tr th:nth-child(3), table tr td:nth-child(3) {
+    width: 1%;
+  } 
+  
+
+  table tr th:nth-child(4), table tr td:nth-child(4) {
+    width: 1%;
+  }  */
+  
 }
