--- a/src/pages/reports/reportMonthlySalesByYear/reportMonthlySalesByYear.css
+++ b/src/pages/reports/reportMonthlySalesByYear/reportMonthlySalesByYear.css
@@ -4,3 +4,11 @@
   margin-bottom: 5px;
   font-size: 18px;
 }
+
+/* 430px */
+@media (max-width:26.875em) {
+  .reporte {
+      display: none;
+  }
+
+}
