--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -25,12 +25,13 @@
 
 .buttonAddProductToBasket {
   width: 100%;
-  height: 3rem;
+  height: auto;
   font-size: 1.4rem;
   border: none;
-  padding: .5rem;
+  padding: 1rem 1rem;
   background-color: teal;
-  border-radius: .5rem;
+  /* background: linear-gradient(to right, #e65c00, #f9d423); */
+  border-radius: 10rem;
   cursor: pointer;
   color: white;
 }
