--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -43,3 +43,10 @@
     margin-right: .5rem;
     font-size: 2rem !important;
 }
+
+/* 1000px */
+@media (max-width:62.5em) {
+  .sidebar {
+    display: none;
+  }
+}
