--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -4,15 +4,19 @@
 } */
 .login {
   /* height: calc(100vh - 5rem); */
+
+  /* FLEX */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  /* ESTILIZAR */
   background: linear-gradient(
       rgba(255, 255, 255, 0.5),
       rgba(255, 255, 255, 0.5)
     ),
-    url("/public/img/website/halloween.jpeg");
+    url("/public/img/website/gomitasydulces.jpeg");
   background-size: cover;
   background-position: center;
   overflow-y: hidden;
@@ -30,17 +34,22 @@
 .login-form {
   margin: 0 auto;
   max-width: 55rem;
-  background-color: rgba(255, 255, 255, .8);
+
+  /* ESTILIZAR */
+  background-color: rgba(255, 255, 255, .65);
   -webkit-box-shadow: 0 2.5rem 8rem 2rem rgba(0, 0, 0, 0.06);
   box-shadow: 0 2.5rem 8rem 2rem rgba(0, 0, 0, 0.06);
-  padding: 5rem 7rem;
   border-radius: 5px;
+
+  padding: 5rem 7rem;
 }
 
 .heading-secondary {
   font-size: 2.25rem;
   text-transform: uppercase;
   font-weight: 700;
+
+  /* ESTILIZAR */
   background-image: -webkit-gradient(
     linear,
     left top,
@@ -49,9 +58,12 @@
     to(#28b487)
   );
   background-image: linear-gradient(to right, #7dd56f, #28b487);
+
   -webkit-background-clip: text;
   background-clip: text;
+  
   color: transparent;
+
   letter-spacing: 0.1rem;
   line-height: 1.3;
   display: inline-block;
@@ -80,8 +92,10 @@
   padding: 1.25rem 1.75rem;
   border: none;
   width: 100%;
+
   background-color: rgb(169, 168, 168);
   background-color: rgba(250, 188, 188, 0.705);
+  
   border-top: 3px solid transparent;
   border-bottom: 3px solid transparent;
   -webkit-transition: all 0.3s;
@@ -92,13 +106,16 @@
   /* Pseudo element (a visible thing that isn't really in the DOM).
       Also needs -ms- */
 }
+
 .form__input:focus {
   outline: none;
   border-bottom: 3px solid #55c57a;
 }
+
 .form__input:focus:invalid {
   border-bottom: 3px solid #ff7730;
 }
+
 .form__input::-webkit-input-placeholder {
   color: rgba(101, 87, 87, 0.516);
 }
@@ -122,9 +139,12 @@
   display: inline-block;
   text-decoration: none;
   position: relative;
+  font-weight: 400;
+
+  /* ANIMATION */
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
-  font-weight: 400;
+  
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   /*Add later when we use this for the button in form*/
@@ -135,6 +155,7 @@
 .btn:hover {
   -webkit-transform: translateY(-3px);
   transform: translateY(-3px);
+
   -webkit-box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
 }
@@ -142,6 +163,7 @@
 .btn:active {
   -webkit-transform: translateY(-1px);
   transform: translateY(-1px);
+
   -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 }
