--- a/src/pages/placeOrder/updateOrder/updateOrder.css
+++ b/src/pages/placeOrder/updateOrder/updateOrder.css
@@ -114,11 +114,12 @@
 
 .placeOrderButton {
   width: 12rem;
-  border-radius: .5rem;
+  border-radius: 10rem;
   border: none;
-  padding: 1.5rem;
+  padding: 1rem 1.5rem;
   cursor: pointer;
-  background-color: darkblue;
+  /* background-color: darkblue; */
+  background: linear-gradient(to right, #8e2de2, #4a00e0);
   color: white;
   font-size: 1.4rem;
   font-weight: 600;
@@ -126,11 +127,13 @@
 
 .deleteOrderButton {
   width: 10rem;
-  border-radius: .5rem;
+  border-radius: 10rem;
   border: none;
-  padding: 1.5rem;
+  padding: 1rem 1.5rem;
   cursor: pointer;
-  background-color: rgba(159, 9, 9, 0.844);
+  /* background-color: rgba(159, 9, 9, 0.844); */
+  background: linear-gradient(to right, #f00000, #dc281e);
+
   color: white;
   font-size: 1.4rem;
   font-weight: 600;
@@ -258,22 +261,42 @@
     font-size: 1.2rem;
 }
 
-
-/* @media (max-width:42.5em) {
-  html {
-    font-size: 50%;
+/* 780px */
+@media (max-width:48.75em) {
+  .estatusPedidoPlaceOrder {
+    flex-direction: column;
+    align-items: end;
   }
 }
 
-
+/* 580px */
 @media (max-width:36.25em) {
-  html {
-    font-size: 40%;
+  .container-estatusPedido__select {
+    height: 4rem;
+    width: 12rem;
+  }
+
+  .searchInput {
+    width: 20rem;
   }
 }
 
+/* 480px */
 @media (max-width:30em) {
-  html {
-    font-size: 35%;
+  .searchInput {
+    width: 14rem;
   }
-} */
+
+  .container-estatusPedido__select {
+    height: 4rem;
+    width: 10rem;
+  }
+
+  .placeOrderButton {
+    width: 10rem;
+  }
+
+  .totalPedido__item{
+    font-size: 1.6rem;
+  }
+}
