--- a/src/components/card/Backup antes del cambio de Iconos 11 Nov card.css
+++ b/src/components/card/Backup antes del cambio de Iconos 11 Nov card.css
@@ -27,19 +27,13 @@
   width: 100%;
   height: auto;
   font-size: 1.4rem;
-  /* border: none; */
+  border: none;
   padding: 1rem 1rem;
-  /* background-color: teal; */
+  background-color: teal;
   /* background: linear-gradient(to right, #e65c00, #f9d423); */
   border-radius: 10rem;
   cursor: pointer;
-  /* color: white; */
-
-  background: #f0c14b;
-  border: 1px solid;
-  border-color: #a88734 #9c7e31 #846a29;
-  color: #111;
-
+  color: white;
 }
 
 .card--stats__info {
