--- a/src/components/topbar/Backup antes del cambio de iconos 11 Nov topbar.css
+++ b/src/components/topbar/Backup antes del cambio de iconos 11 Nov topbar.css
@@ -21,24 +21,7 @@
   font-size: 3rem;
   color: darkblue;
   cursor: pointer;
-  animation: logoEffect 2.7s;
 }
-
-@keyframes logoEffect {
-
-  0% {
-     transform: translateY(-250px);
-   }
-   50% {
-    transform: translateY(-10px);
-     transition-duration: 2500ms;
-     transition-delay: 200ms;
-     transition-property: all;
-   }
-   100% {
-    transform: translateY(0px);
-   }
- }
 
 .topRight{
     display: flex;
@@ -81,110 +64,41 @@
 
 .logo {
   font-size: 2rem;
-
-  /* font-size: 2.25rem; */
-  text-transform: uppercase;
-  font-weight: 700;
-  
-  background-image: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
-
-  background-image: #833ab4;  
-  /* fallback for old browsers */
-  background-image: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);  
-  
-  /* Chrome 10-25, Safari 5.1-6 */
-  background-image: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4); 
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-  background-size: 400%;
-
-  -webkit-background-clip: text;
-  background-clip: text;
-  
-  color: transparent;
-
-  letter-spacing: 0.1rem;
-  line-height: 1.3;
-  display: inline-block;
-
-  background-size: 300%;
-  animation: bg-animation 15s infinite alternate;
-  
 }
 
-@keyframes bg-animation {
-	0% {
-		background-position: left;
-	}
-
-	100% {
-		background-position: right;
-	}
-}
-
+/* .logoutButton, */
 .loginButton {
+  /* border-radius: .5rem; */
+  border: none;
+  padding: 1rem;
+  cursor: pointer;
+  /* background-color: darkblue; */
   /* background-image: -webkit-gradient(
     linear,
     left top,
     right top,
     from(#f12711),
     to(#f5af19)
-    ); */
-    /* background: linear-gradient(to right, #f12711, #f5af19); */
-    /* background: linear-gradient(to right, #8e2de2, #4a00e0); */
-    /* background: linear-gradient(to right, #0575e6, #021b79); */
-    /* background: linear-gradient(to right, #000428, #004e92); */
-
+  ); */
+  /* background: linear-gradient(to right, #f12711, #f5af19); */
+  /* background: linear-gradient(to right, #8e2de2, #4a00e0); */
+  /* background: linear-gradient(to right, #0575e6, #021b79); */
+  /* background: linear-gradient(to right, #000428, #004e92); */
   background: linear-gradient(to right, #6190e8, #a7bfe8);
-  cursor: pointer;
-  border: none;
-  padding: 1rem;
 
   color: white;
   font-size: 1.2rem;
   font-weight: 600;
   text-decoration: none;
+
+  /* font-size: 1.6rem; */
+  /* padding: 1.4rem 3rem; */
   border-radius: 10rem;
+  /* text-transform: uppercase; */
   display: inline-block;
   text-decoration: none;
-
-  overflow: hidden;
-
-  position: relative;
-  /*background-color: #04AA6D;
-  border: none;
-  font-size: 28px;
-  color: #FFFFFF;
-  padding: 20px;
-  width: 200px;
-  text-align: center;
-  -webkit-transition-duration: 0.4s;
-  transition-duration: 0.4s;
-  cursor: pointer;
-  text-decoration: none;
-  overflow: hidden; */
-
-}
-
-.loginButton:after {
-  content: "";
-  background: #90EE90;
-  display: block;
-  position: absolute;
-  padding-top: 300%;
-  padding-left: 350%;
-  
-  margin-left: -180px!important;
-  margin-top: -120%;
-  opacity: 0;
-  transition: all 1s
-}
-
-.loginButton:active:after {
-  padding: 0;
-  margin: 0;
-  opacity: 1;
-  transition: 0s
+  /* position: relative; */
+  /* font-weight: 400; */
 }
 
 /* <Link to={"/client/" + params.row._id}>
@@ -228,24 +142,6 @@
   text-decoration: none;
 }
 
-.liga__flex {
-  display: flex;
-  align-items: center;
-}
-
-.iconos__placeOrder {
-  font-size: 2.2rem;
-  color: #f0c14b;
-}
-
-.iconos__signOut {
-  font-size: 2.2rem;
-}
-
-.tipografia {
-  font-size: 1.8rem;
-}
-
 /* 680px */
 @media (max-width:42.5em) {
   /* .logo {
@@ -267,17 +163,14 @@
 
 /* 480px */
 @media (max-width:30em) {
-  .logo {
+  /* .logo {
     font-size: 1.5rem;
-  }
+  } */
 
   .logoutButton,
   .loginButton,
   .crearPedidoButton {
     padding: 1rem;
-    
-    font-size: 1rem;
-    font-weight: 400;
     /* font-size: 1.1rem; */
     /* font-weight: 600; */
   }
