--- a/src/pages/catalogs/list/clientList/clientList.css
+++ b/src/pages/catalogs/list/clientList/clientList.css
@@ -31,7 +31,8 @@
 .clientListDelete{
     color: red;
     cursor: pointer;
-    font-size: 2.4rem !important;
+    /* font-size: 2.4rem !important; */
+    font-size: 1.9rem;
 }
 
 .clientTitleContainer {
