--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -276,8 +276,8 @@
   .crearPedidoButton {
     padding: 1rem;
     
-    font-size: 1rem;
-    font-weight: 400;
+    /* font-size: 1rem;
+    font-weight: 400; */
     /* font-size: 1.1rem; */
     /* font-weight: 600; */
   }
