--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -168,7 +168,8 @@
 
 .loginButton:after {
   content: "";
-  background: #90EE90;
+  /* background: #90EE90; */
+  background: #05fb05;
   display: block;
   position: absolute;
   padding-top: 300%;
@@ -177,7 +178,7 @@
   margin-left: -180px!important;
   margin-top: -120%;
   opacity: 0;
-  transition: all 1s
+  transition: all .7s
 }
 
 .loginButton:active:after {
