Ya con animaciones

--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,12 @@
     text-decoration: none;
     color: inherit;
 }
+
+
+/* 480px */
+@media (max-width:30em) {
+	.container {
+		align-items: center;
+        justify-content: center;
+	}
+}
