--- a/src/components/skeletons/skeleton.css
+++ b/src/components/skeletons/skeleton.css
@@ -1,7 +1,6 @@
 /* Basic styles */
 
 .skeleton {
-  background-color: #ddd;
   margin: 1rem 0;
   border-radius: .4rem;
 }
@@ -9,29 +8,49 @@
 
 .skeleton.text {
   width: 100%;
-  height: 1.2rem;
+  /* height: 1.2rem; */
 }
 
 .skeleton.title {
   width: 50%;
-  height: 2rem;
+  /* height: 2rem; */
   margin-bottom: 1.5rem;
 }
 
 .skeleton.avatar {
-  width: 10rem;
-  height: 10rem;
+  /* width: 10rem;
+  height: 10rem; */
   border-radius: 50%;
 }
 
-.skeleton.thumbnail {
+/* .skeleton.thumbnail {
   width: 10rem;
   height: 10rem;
-}
+} */
 
 .skeleton.rectangular {
-  width: 98rem;
-  height: 32rem;
+  /* width: 98rem;
+  height: 32rem; */
   margin: 2rem;
   padding: 2rem;
+}
+
+.candies {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  padding-top: 6rem;
+}
+
+.candies span {
+  font-size: 10rem;
+}
+
+
+/* 480px */
+@media (max-width:30em) {
+  .candies span {
+    font-size: 8rem;
+  }
 }
