--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -16,7 +16,7 @@
       rgba(255, 255, 255, 0.5),
       rgba(255, 255, 255, 0.5)
     ),
-    url("/public/img/website/gomitasydulces.jpeg");
+    url("/public/img/website/gomitas.jpeg");
   background-size: cover;
   background-position: center;
 
@@ -212,6 +212,10 @@
 
   .main {
     padding: 2rem 6rem;
+  }
+
+  .login {
+    background-attachment: fixed;
   }
 
 
