--- a/src/pages/placeOrder/newOrUpdateOrder/newOrUpdateOrder.css
+++ b/src/pages/placeOrder/newOrUpdateOrder/newOrUpdateOrder.css
@@ -97,6 +97,9 @@ h2 {
   /*Add later when we use this for the button in form*/
   border: none;
   cursor: pointer;
+
+  overflow: hidden;
+  position: relative;
 }
 
 .linkActualizarPedido__button {
@@ -108,6 +111,78 @@ h2 {
   cursor: pointer;
   margin-bottom: 1.2rem;
   font-size: 1.4rem;  
+
+  overflow: hidden;
+  position: relative;
+}
+
+
+.loginButton {
+  /* background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(#f12711),
+    to(#f5af19)
+    ); */
+    /* background: linear-gradient(to right, #f12711, #f5af19); */
+    /* background: linear-gradient(to right, #8e2de2, #4a00e0); */
+    /* background: linear-gradient(to right, #0575e6, #021b79); */
+    /* background: linear-gradient(to right, #000428, #004e92); */
+
+  background: linear-gradient(to right, #6190e8, #a7bfe8);
+  cursor: pointer;
+  border: none;
+  padding: 1rem;
+
+  color: white;
+  font-size: 1.2rem;
+  font-weight: 600;
+  text-decoration: none;
+  border-radius: 10rem;
+  display: inline-block;
+  text-decoration: none;
+
+  overflow: hidden;
+
+  position: relative;
+  /*background-color: #04AA6D;
+  border: none;
+  font-size: 28px;
+  color: #FFFFFF;
+  padding: 20px;
+  width: 200px;
+  text-align: center;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  text-decoration: none;
+  overflow: hidden; */
+
+}
+
+.linkActualizarPedido__button:after,
+.linkNuevoPedido__button:after {
+  content: "";
+  /* background: #90EE90; */
+  background: #05fb05;
+  display: block;
+  position: absolute;
+  padding-top: 300%;
+  padding-left: 350%;
+  
+  margin-left: -180px!important;
+  margin-top: -120%;
+  opacity: 0;
+  transition: all .7s
+}
+
+.linkActualizarPedido__button:active:after,
+.linkNuevoPedido__button:active:after {
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+  transition: 0s
 }
 
 .ultimosCincoPedidos_group {
