--- a/src/pages/placeOrder/searchClient/searchClient.css
+++ b/src/pages/placeOrder/searchClient/searchClient.css
@@ -34,7 +34,6 @@ h2 {
   width: 20rem;
   height: 4rem;
   border: none;
-  /* background-color: darkblue; */
   background: linear-gradient(to left, #0575e6, #021b79);
 
   color: white;
@@ -43,6 +42,31 @@ h2 {
   border-radius: 1.4rem;
   cursor: pointer;
   font-size: 1.6rem;
+
+  overflow: hidden;
+  position: relative;
+}
+
+.btnSearchClient:after {
+  content: "";
+  /* background: #90EE90; */
+  background: #05fb05;
+  display: block;
+  position: absolute;
+  padding-top: 300%;
+  padding-left: 350%;
+  
+  margin-left: -180px!important;
+  margin-top: -120%;
+  opacity: 0;
+  transition: all .7s
+}
+
+.btnSearchClient:active:after {
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+  transition: 0s
 }
 
 .btnSearchClient:disabled,
