--- a/src/pages/placeOrder/updateOrder/updateOrder.css
+++ b/src/pages/placeOrder/updateOrder/updateOrder.css
@@ -199,9 +199,9 @@
 
   display: flex;
   /* align-items alinea VERTICAL */
-  align-items: center;
+  /* align-items: center; */
   /* justify-content alinea HORIZONTAL */
-  justify-content: center;
+  /* justify-content: center; */
   overflow-x: scroll;
   scroll-snap-type: x proximity;
 
