--- a/src/pages/catalogs/create/newProduct/Backup al 23 Nov newProduct.css
+++ b/src/pages/catalogs/create/newProduct/Backup al 23 Nov newProduct.css
@@ -9,33 +9,35 @@
 .addProductForm {
   margin-top: 1rem;
   display: flex;
-  justify-content: space-between;
-
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
 }
 
 .addProductItem {
   width: 25rem;
   display: flex;
   flex-direction: column;
+  /* margin-bottom: 1rem; */
+  margin-top: 1rem;
   margin-right: 2rem;
-  margin-bottom: 2rem;
 }
 
 .addProductItem > label {
   color: rgb(151, 150, 150);
   font-size: 1.4rem;
   font-weight: 600;
-  margin-bottom: .25rem;
+  margin-bottom: 1rem;
 }
 
 .addProductItem > input {
-  width: 40rem;
   height: 2.8rem;
   padding: 1rem 1rem;
   border: .1rem solid gray;
   border-radius: .5rem;
   font-size: 1.4rem;
+}
+
+.addProductItem > select {
+  padding: 1rem;
 }
 
 .addProductButton {
@@ -54,37 +56,4 @@
 .addProductButton:disabled,
 .addProductButton[disabled] {
   background-color: gray;
-}
-
-.addproductLeft {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  padding-left: 3rem;
-  padding-right: 2rem;
-}
-
-.addproductRight{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  padding-left: 2rem;
-  padding-right: 3rem;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.productUpdateUpload{
-  display: flex;
-  align-items: center;
-}
-
-.productUpdateImg{
-  width: 35rem;
-  height: 35rem;
-  border-radius: 1rem;
-  object-fit: cover;
-  margin-right: 2rem;
-  margin-bottom: 1.5rem;
 }
